@@ -6,6 +6,7 @@
 - fix anova_design_matrix for between-subject >2 values (rest of RT#97925)
 - add demo
 - remove filt_exp and filt_ma, deprecated in 2011
+- now an exception to give anova n-observations <= product of categories in IVs
 
 0.853 2025-01-03
 - uses PDL 2.096+ lib/*.pd format for quicker builds
